Penambahan file latihan baru (Japaskrip.js; Latihan.html; Latihan_Kalkulator.html; nyoba.html; script.html; Soal.html; Setail.css; style.css)

--- a/nyoba.html
+++ b/nyoba.html
@@ -12,7 +12,7 @@
 
     <section>
         <center><h2>Selamat Datang!</h2></center>
-        <p>Ini adalah bagian utama halaman.</p>
+        <p>Halaman ini adalah portofolio Paulus Ungirwalu</p>
     </section>
 
     <nav>
