Perubahan dan penambahan file About.html dan Contact.html serta memperbaiki tampilan pada latihan.html yaitu pada bagian navigation bar, logo/image, footer, dan penambahan interaksi atau respon ketika cursor digerakan

--- a/Latihan.html
+++ b/Latihan.html
@@ -3,38 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Tab</title>
+    <title>Paupau Tab</title>
     <link rel="stylesheet" href="Setail.css">
 </head>
 <body>
+    <div class="container">
     <!-- Navigasi -->
-    <div>
-        <ul>
-            <li>Home</li>
-            <li>about me</li>
-            <li>Contact me</li>
+    <div class="navbar">
+        <ul class="ulnavbar">
+            <li class="linavbar"><a href="#" class="ling">Home</a></li>
+            <li class="linavbar"><a href="About.html" class="ling">About me</a></li>
+            <li class="linavbar"><a href="Contact.html" class="ling">Contact me</a></li>
         </ul>
     </div>
     <!-- Navigasi done -->
 
     <!-- Content 1 -->
-    <div>
-        <img src="Lego.png" width="10%" height="10%">
+    <div class="Containercontent">
+        <a href="https://www.lego.com/" class="a-content"><img src="Lego.png" class="imgcontent">
+            <b><p>Pencet untuk mampir ke youtube</p>
+        </a>
     </div>
     <!-- Content 1 done -->
 
-    <!-- Content 2 -->
-    <div>
-        Content 2
-    </div>
-    <!-- Content 2 done -->
-
     <!-- footer -->
-    <div>
-        <h1>Halo!</h1>
-        <h2>Saya Paulus</h2>
-        <h3>71231017</h3>
+    <div class="footer">
+        <h1 class="h1_footer">Arigato DEA Afrizal</h1>
     </div>
     <!-- footer done -->
-</body>
+
+        </div>
+    </body>
 </html>
