Membuat semua navigasi saling terhubung dan menambahkan script di atas body tutup supaya javascript bisa terhubung dengan html

--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aboout Paupau</title>
+    <title>Paupau Tab</title>
     <link rel="stylesheet" href="Setail.css">
 </head>
 <body>
@@ -11,11 +11,28 @@
     <!-- Navigasi -->
     <div class="navbar">
         <ul class="ulnavbar">
-            <li class="linavbar"><a href="#" class="ling">Home</a></li>
-            <li class="linavbar"><a href="About.html" class="ling">About me</a></li>
+            <li class="linavbar"><a href="Latihan.html" class="ling">Home</a></li>
+            <li class="linavbar"><a href="#" class="ling">About me</a></li>
             <li class="linavbar"><a href="Contact.html" class="ling">Contact me</a></li>
         </ul>
     </div>
     <!-- Navigasi done -->
-</body>
+
+    <!-- Content 1 -->
+    <div class="Containercontent">
+        <a href="https://cookpad.com/id/cari/nasi%20goreng" class="a-content"><img src="Nasgor.jpg" class="imgcontent">
+            <b><p>Pencet untuk lihat nasgor</p>
+        </a>
+    </div>
+    <!-- Content 1 done -->
+
+    <!-- footer -->
+    <div class="footer">
+        <h1 class="h1_footer">Arigato DEA Afrizal</h1>
+    </div>
+    <!-- footer done -->
+
+        </div>
+        <script src="Japaskrip.js" type="text/javascript"/>
+    </body>
 </html>
