Perubahan_hari_selasa

--- a/Latihan.html
+++ b/Latihan.html
@@ -20,8 +20,12 @@
 
     <!-- Content 1 -->
     <div class="Containercontent">
-        <a href="https://www.lego.com/" class="a-content"><img src="Lego.png" class="imgcontent">
+        <a href="https://www.lego.com/" class="a-content">
+            <img src="Lego.png" class="imgcontent">
             <b><p>Pencet untuk mampir ke youtube</p>
+                <!-- Data Start -->
+                <div id="biodata"></div>
+                <!-- Data End -->
         </a>
     </div>
     <!-- Content 1 done -->
@@ -33,6 +37,6 @@
     <!-- footer done -->
 
         </div>
-        <script src="Japaskrip.js" type="text/javascript"/>
+        <script src="Japaskrip.js" type="text/javascript"></script>
     </body>
 </html>
