Belajar progweb (file catatan progweb dan YAYA)

--- a/Latihan.html
+++ b/Latihan.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paupau Tab</title>
+    <!-- Mulai link di tab -->
+    <link rel="icon" type="image/x-icon" href="Lego.png">
     <link rel="stylesheet" href="Setail.css">
+    <!-- end link di tab -->
 </head>
 <body>
     <div class="container">
@@ -26,6 +29,7 @@
                 <!-- Data Start -->
                 <div id="biodata"></div>
                 <!-- Data End -->
+                
         </a>
     </div>
     <!-- Content 1 done -->
